[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label_lista" type="Label" parent="."]
margin_left = 48.0
margin_top = 89.0
margin_right = 248.0
margin_bottom = 149.0
text = "Lista"
align = 1
valign = 1

[node name="user" type="LineEdit" parent="."]
margin_left = 419.0
margin_top = 85.0
margin_right = 579.0
margin_bottom = 151.0

[node name="msg" type="Label" parent="."]
margin_left = 475.0
margin_top = 304.0
margin_right = 739.0
margin_bottom = 432.0
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
margin_left = 459.0
margin_top = 34.0
margin_right = 565.0
margin_bottom = 69.0
text = "Digite seu nome
"

[node name="Button" type="Button" parent="."]
margin_left = 488.0
margin_top = 216.0
margin_right = 696.0
margin_bottom = 274.0
text = "Aperte para ter as infromações"

[node name="idade" type="LineEdit" parent="."]
margin_left = 608.0
margin_top = 82.0
margin_right = 784.0
margin_bottom = 155.0

[node name="idade_" type="Label" parent="."]
margin_left = 636.0
margin_top = 31.0
margin_right = 730.0
margin_bottom = 64.0
text = "Idade
"

[node name="lista_feita" type="Button" parent="."]
margin_left = 92.0
margin_top = 185.0
margin_right = 209.0
margin_bottom = 237.0
text = "lista predifinida"

[node name="exibir_msg" type="Button" parent="."]
margin_left = 48.0
margin_top = 321.0
margin_right = 257.0
margin_bottom = 368.0
text = "Aperte para exibir a msg"

[node name="Label2" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="lista_feita" to="." method="_on_lista_feita_pressed"]
[connection signal="pressed" from="exibir_msg" to="." method="_on_exibir_msg_pressed"]
